# sasso-ruby

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  Rakefile  sasso.gemspec
.github/workflows/: ci.yml  release.yml
benchmark/: Gemfile  README.md  compare.rb  inputs.rb
ext/sasso/: Cargo.toml  build.rs  extconf.rb
ext/sasso/src/: lib.rs
lib/: sasso.rb
lib/sasso/: version.rb
sig/: sasso.rbs
test/: compile_test.rb  test_helper.rb
